Arreglos en los textos y mejora para cargar textura de fondo, Se ha remplazado la logica de shaders (no funciona)